arduino/src/build/log/idf_py_stderr_output_65241
/Users/rodriguedeguerre/Desktop/EPFHelp/HALytics/arduino/src/main/main.cpp: In function 'void setup()':
/Users/rodriguedeguerre/Desktop/EPFHelp/HALytics/arduino/src/main/main.cpp:154:5: error: 'Serial' was not declared in this scope
  154 |     Serial.begin(115200);
      |     ^~~~~~
/Users/rodriguedeguerre/Desktop/EPFHelp/HALytics/arduino/src/main/main.cpp: In function 'void loop()':
/Users/rodriguedeguerre/Desktop/EPFHelp/HALytics/arduino/src/main/main.cpp:190:5: error: 'Serial' was not declared in this scope
  190 |     Serial.println("The force sensor value = ");
      |     ^~~~~~
/Users/rodriguedeguerre/Desktop/EPFHelp/HALytics/arduino/src/main/main.cpp:206:5: error: 'delay' was not declared in this scope
  206 |     delay(1000);
      |     ^~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj] Error 1
make[1]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [all] Error 2
